[package]
name = "aoc2020"
version = "0.1.0"
authors = ["jesusjbr <jesusjavierbr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.0"}
petgraph = "0.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
